test_outputs/connlist/exposure_test_with_no_netpols_connlist_output.txt
0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255 : All Connections

Exposure Analysis Result:
0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment] : All Connections
entire-cluster => hello-world/workload-a[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-a[Deployment] => entire-cluster : All Connections

Workloads which are not protected by network policies:
hello-world/workload-a[Deployment] is not protected on Egress
hello-world/workload-a[Deployment] is not protected on Ingress
